[tool.poetry]
name = "3-11"
version = "0.1.0"
description = ""
authors = ["yoshimi-I <iwatsuki.443@outlook.com>"]
readme = "../../../README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true


extend-include = ["*.ipynb"]

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = []
# 1行の最大文字数
line-length = 88
format.indent-style="tab"

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]



[tool.ruff.lint.pydocstyle]
# docstringはgoogle style
convention = "google"


[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]
