[tool.poetry]
name = "3-12"
version = "0.1.0"
description = ""
authors = ["yoshimi-I <iwatsuki.443@outlook.com>"]
readme = "../../../README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
